# kitti_raw_kit

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.cpp  config.hpp  data.cpp  data.hpp  dataset.cpp  dataset.hpp  define.hpp  image.cpp  image.hpp  kitti_kit_raw.cpp  kitti_kit_raw.hpp  timestamp.cpp  timestamp.hpp
test/: CMakeLists.txt  test_config.cpp  test_dataset_image.cpp  test_label.cpp  test_timestamp.cpp
